--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "node ./src",
+    "start": "pm2 start --watch --interpreter babel-cli pm2_config.json",
     "notify": "babel-node ./src/notify",
     "task": "babel-node ./src/task"
   },
@@ -24,6 +24,7 @@
     "handlebars": "^4.0.12",
     "nodemailer": "^5.0.0",
     "nodemailer-express-handlebars": "^3.0.0",
+    "pm2": "^3.2.4",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "slack": "^6.1.0"
@@ -41,6 +42,6 @@
   },
   "license": "MIT",
   "engines": {
-    "node" : ">=8.0.0 <11.0.0" 
+    "node": ">=8.0.0 <11.0.0"
   }
 }
