--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "pm2 start --watch --interpreter babel-cli pm2_config.json",
+    "start": "babel-node ./src/task.js",
     "notify": "babel-node ./src/notify",
     "task": "babel-node ./src/task"
   },
@@ -21,6 +21,7 @@
     "botkit": "0.0.7",
     "cron": "^1.6.0",
     "express": "^4.13.4",
+    "forever": "^0.15.3",
     "handlebars": "^4.0.12",
     "nodemailer": "^5.0.0",
     "nodemailer-express-handlebars": "^3.0.0",
@@ -30,7 +31,6 @@
     "slack": "^6.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1"
